--- a/index.html
+++ b/index.html
@@ -5,84 +5,114 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="./styles/style.css">
+	<link rel="stylesheet" href="./styles/adaptation.css">
 	<title>Обо мне</title>
 </head>
-
 <body>
-<header>
-	<div class="content">
-		<nav>
-			<ul>
-				<li><a href="./html/second_page.html">HTML</a></li>
-				<li><a href="./html/second_page.html#css">CSS</a></li>
-				<li><a href="./html/second_page.html#javascript">JavaScript</a></li>
-			</ul>
-		</nav>
+	<div class="main-content">
+		<header class="content">
+			<nav>
+				<ul>
+					<li><a href="#">Главная</a></li>
+					<li><a href="/urban-html/html/comments.html">Комментарии</a></li>
+					<li><a href="/urban-html/html/homeworks.html">Мои дз</a></li>
+				</ul>
+			</nav>
+		</header>
+
+		<main class="content">
+			<section id="about_me">
+				<picture>
+					<source srcset="./images/cat.webp" type="image/webp" />
+					<img class="cat block-margin" src="./images/cat.png" alt="Мордочка лежащего котика" />
+				</picture>
+
+				<p class="information block-margin" aria-label="Краткая информация обо мне">
+					Приветствую! Я — Елисеев Максим, начинающий Frontend-разработчик. Давно хотел серьёзно взяться за фронтед-разработку, но все никак не мог собраться с силами.
+					В итоге: начал обучаться в Urban University, чтобы это послужило мне некой мотивацией. Имею за плечами небольшой опыт как во фронтенд разработке, так и в бэкенд.
+					В бэкенде практиковался на PHP и немного Node.js.
+					Так как Node.js работает в однопоточном режиме, то там мне очень понравилось практиковать горизонтальное масштабирование и настраивать общение между мастером и дочерными процессами. Также дополнительно настраивал общение дочерных процессов между собой через сокет — это был сложный, но довольно увлекательный опыт.
+				</p>
+			</section>
+
+			<section class="information block-margin">
+				<h2>Мои лучшие качества:</h2>
+				<ul aria-label="Список моих лучших качеств (по собственному мнению)">
+					<li>Стрессоустойчивый</li>
+					<li>Ответственно подхожу к поставленной задаче</li>
+					<li>Всегда открыт к конструктивной критике</li>
+					<li>Считаю, что способен быстро обучаться какому-либо новому материалу</li>
+					<li>Люблю детально разбираться в решении сложных для меня задач</li>
+				</ul>
+			</section>
+
+			<section id="contact">
+				<nav class="links block-margin">
+					<div class="buttons block-margin">
+						<a href="https://t.me/m4kasimka" target="_blank">
+							<button>Написать</button>
+						</a>
+
+						<a href="tel:+79991111111">
+							<button>Позвонить</button>
+						</a>
+
+						<a href="mailto:makasimka93@list.ru">
+							<button>Предложение о работе</button>
+						</a>
+					</div>
+				</nav>
+			</section>
+		</main>
 	</div>
-</header>
 
-<main>
-	<div class="content">
-		<picture>
-			<source srcset="./images/cat.webp" type="image/webp" />
-			<img class="cat block-margin" src="./images/cat.png" alt="Мордочка лежащего котика" />
-		</picture>
+	<footer>
+		<div class="content footer-content">
+			<div class="footer-links">
+				<section>
+					<nav>
+						<h3>Полезные ссылки</h3>
+						<ul>
+							<li>
+								<a href="/urban-html/html/homeworks/homework1.html">Кратко о HTML, CSS и JS</a>
+							</li>
+							<li>
+								<a href="/urban-html/html/homeworks/homework2.html">Кратко о фронтенде</a>
+							</li>
+							<li>
+								<a href="/urban-html/html/homeworks.html">Список моих дз</a>
+							</li>
+						</ul>
+					</nav>
+				</section>
 
-		<p class="information block-margin" aria-label="Краткая информация обо мне">
-			Приветствую! Я — Елисеев Максим, начинающий Frontend-разработчик. Давно хотел серьёзно взяться за фронтед-разработку, но все никак не мог собраться с силами.
-			В итоге: начал обучаться в Urban University, чтобы это послужило мне некой мотивацией. Имею за плечами небольшой опыт как во фронтенд разработке, так и в бэкенд.
-			В бэкенде практиковался на PHP и немного Node.js.
-			Так как Node.js работает в однопоточном режиме, то там мне очень понравилось практиковать горизонтальное масштабирование и настраивать общение между мастером и дочерными процессами. Также дополнительно настраивал общение дочерных процессов между собой через сокет — это был сложный, но довольно увлекательный опыт.
-		</p>
+				<section>
+					<nav>
+						<h3>Связь со мной</h3>
+						<ul aria-label="Ссылки на мои социальные сети и гитхаб">
+							<li aria-label="Профиль ВКонтакте">
+								<a href="https://vk.com/makasimka_eliseev" target="_social">VK: Елисеев Максим</a>
+							</li>
 
-		<div class="qualities block-margin">
-			<h4>Мои лучшие качества:</h4>
-			<ul aria-label="Список моих лучших качеств (по собственному мнению)">
-				<li>Стрессоустойчивый</li>
-				<li>Ответственно подхожу к поставленной задаче</li>
-				<li>Всегда открыт к конструктивной критике</li>
-				<li>Считаю, что способен быстро обучаться какому-либо новому материалу</li>
-				<li>Люблю детально разбираться в решении сложных для меня задач</li>
-			</ul>
-		</div>
+							<li aria-label="Профиль Telegram">
+								<a href="https://t.me/m4kasimka" target="_social">Telegram: @m4kasimka</a>
+							</li>
 
-		<nav class="links block-margin">
-			<h4>Связаться со мной можно через:</h4>
-			<ul aria-label="Ссылки на мои социальные сети и гитхаб">
-				<li aria-label="Профиль ВКонтакте">
-					<a href="https://vk.com/makasimka_eliseev" target="_social">VK: Елисеев Максим</a>
-				</li>
+							<li aria-label="Профиль на GitHub">
+								<a href="https://github.com/Makasimka" target="_social">GitHub: Makasimka</a>
+							</li>
 
-				<li aria-label="Профиль Telegram">
-					<a href="https://t.me/m4kasimka" target="_social">Telegram: @m4kasimka</a>
-				</li>
-
-				<li aria-label="Профиль на GitHub">
-					<a href="https://github.com/Makasimka" target="_social">GitHub: Makasimka</a>
-				</li>
-			</ul>
-
-			<div class="buttons block-margin">
-				<a href="https://t.me/m4kasimka" target="_blank">
-					<button>Написать</button>
-				</a>
-
-				<a href="tel:+79991111111">
-					<button>Позвонить</button>
-				</a>
-
-				<a href="mailto:makasimka93@list.ru">
-					<button>Предложение о работе</button>
-				</a>
+							<li aria-label="Мой e-mail">
+								<a href="mailto:makasimka93@list.ru">makasimka93@list.ru</a>
+							</li>
+						</ul>
+					</nav>
+				</section>
 			</div>
-		</nav>
-	</div>
-</main>
-
-<footer>
-	<div class="content">
-		© 2024, Eliseev Maxim
-	</div>
-</footer>
+			<div class="block-margin">
+				<p>© 2024, Eliseev Maxim</p>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
