--- a/html/homeworks.html
+++ b/html/homeworks.html
@@ -36,7 +36,7 @@
 					<section class="links-list">
 						<h2>Модуль 2</h2>
 						<ol>
-							<li><a href="./homeworks/homework2.html">Введение</a></li>
+							<li><a href="./homeworks/homework2.html">Кратко о Frontend (введение)</a></li>
 							<li><a href="./homeworks/homework2_1.html">История профессии фронтенд-разработчика</a></li>
 							<li><a href="./comments.html">Форма для добавления комментария</a></li>
 						</ol>
