--- a/html/homeworks/homework2.html
+++ b/html/homeworks/homework2.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="../../styles/style.css?1">
 	<link rel="stylesheet" href="../../styles/adaptation.css">
-	<title>Модуль 2: Введение</title>
+	<title>Кратко о Frontend</title>
 </head>
 <body>
 	<div class="main-content">
@@ -21,8 +21,17 @@
 		</header>
 
 		<main class="content">
-			<h1>Модуль 2: Введение</h1>
+			<h1>Кратко о Frontend</h1>
 			<section class="information block-margin">
+				<ul>
+					<li><a href="#entering">Введение</a></li>
+					<li><a href="#languages">Языки</a></li>
+					<li><a href="#tools">Инструменты</a></li>
+					<li><a href="#articles">Статьи</a></li>
+				</ul>
+			</section>
+
+			<section id="entering" class="information block-margin">
 				<h2>Введение в Frontend-разработку</h2>
 				<p class="information-p">
 					Frontend-разработка отвечает за создание интерфейса пользовательской части веб-сайта или веб-приложения. Она включает в себя работу с HTML, CSS и
@@ -30,7 +39,7 @@
 				</p>
 			</section>
 
-			<section class="information block-margin">
+			<section id="languages" class="information block-margin">
 				<h2>Основными языками Frontend разработки являются:</h2>
 				<ul>
 					<li><strong>HTML (HyperText Markup Language)</strong> — используется для структурирования содержимого веб-страницы;</li>
@@ -39,7 +48,7 @@
 				</ul>
 			</section>
 
-			<section class="information block-margin">
+			<section id="tools" class="information block-margin">
 				<h2>Инструменты Frontend-разработки</h2>
 				<ol>
 					<li><strong>Visual Studio Code</strong> - мощный редактор кода с поддержкой множества языков и плагинов;</li>
@@ -314,7 +323,7 @@
 				</table>
 			</section>
 
-			<section class="information block-margin">
+			<section id="articles" class="information block-margin">
 				<h2>Статьи о фронтенде</h2>
 				<br />
 
