--- a/html/homeworks/homework2_1.html
+++ b/html/homeworks/homework2_1.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="../../styles/style.css?1">
 	<link rel="stylesheet" href="../../styles/adaptation.css">
-	<title>...</title>
+	<title>История профессии Frontend-разработчик</title>
 </head>
 <body>
 	<div class="main-content">
