--- a/html/comments.html
+++ b/html/comments.html
@@ -27,56 +27,58 @@
 					Обратите внимание! Вводимые данные служат лишь для примера, они не отправляются на сервер и нигде не хранятся.
 				</aside>
 
-				<form id="form_comments" action="#" method="get">
-					<fieldset>
-						<legend>Оставьте свой комментарий</legend>
-						<div class="input">
-							<label>
-								<b><sup>*</sup> Имя:</b>
-								<input name="user_name" placeholder="Введите имя" required/>
-							</label>
-						</div>
+				<div class="mg-bottom">
+					<form id="form_comments" action="#" method="get">
+						<fieldset>
+							<legend>Оставьте свой комментарий</legend>
+							<div class="input">
+								<label>
+									<b><sup>*</sup> Имя:</b>
+									<input name="user_name" placeholder="Введите имя" required/>
+								</label>
+							</div>
 
-						<div class="input">
-							<label>
-								<b>Фамилия:</b>
-								<input name="user_surname" placeholder="Введите фамилию / прозвище" />
-							</label>
-						</div>
+							<div class="input">
+								<label>
+									<b>Фамилия:</b>
+									<input name="user_surname" placeholder="Введите фамилию / прозвище" />
+								</label>
+							</div>
 
-						<div class="input">
-							<label>
-								<b><sup>*</sup> E-mail:</b>
-								<input name="user_email" type="email"  placeholder="Введите e-mail адрес" required/>
-							</label>
-						</div>
+							<div class="input">
+								<label>
+									<b><sup>*</sup> E-mail:</b>
+									<input name="user_email" type="email"  placeholder="Введите e-mail адрес" required/>
+								</label>
+							</div>
 
-						<div class="input">
-							<label>
-								<b>Дата рождения:</b>
-								<input name="user_birthday" type="date" title="Выберите дату вашего рождения" />
-							</label>
-						</div>
+							<div class="input">
+								<label>
+									<b>Дата рождения:</b>
+									<input name="user_birthday" type="date" title="Выберите дату вашего рождения" />
+								</label>
+							</div>
 
-						<div class="input">
-							<label>
-								<b>Количество лет в сфере frontend-разработки:</b>
-								<input name="user_dev_experience" type="number" placeholder="Введите количество лет" />
-							</label>
-						</div>
+							<div class="input">
+								<label>
+									<b>Количество лет в сфере frontend-разработки:</b>
+									<input name="user_dev_experience" type="number" placeholder="Введите количество" />
+								</label>
+							</div>
 
-						<div class="input">
-							<label>
-								<b><sup>*</sup> Ваш Комментарий:</b>
-								<textarea name="user_comment" placeholder="Напишите комментарий" required></textarea>
-							</label>
-						</div>
+							<div class="input">
+								<label>
+									<b><sup>*</sup> Ваш комментарий:</b>
+									<textarea name="user_comment" placeholder="Напишите комментарий" required></textarea>
+								</label>
+							</div>
 
-						<div class="submit">
-							<input type="submit" value="Отправить комментарий">
-						</div>
-					</fieldset>
-				</form>
+							<div class="submit">
+								<input type="submit" value="Отправить комментарий">
+							</div>
+						</fieldset>
+					</form>
+				</div>
 			</section>
 
 			<section class="information block-margin">
