--- a/html/homeworks/homework2.html
+++ b/html/homeworks/homework2.html
@@ -57,270 +57,272 @@
 					<li><strong>Webpack</strong> - Сборщик модулей для JavaScript приложений».</li>
 				</ol>
 
-				<table>
-					<caption>Таблица владения навыками</caption>
-					<thead>
-					<tr>
-						<th colspan="2">Навыки</th>
-						<th>Junior</th>
-						<th>Middle</th>
-					</tr>
-					</thead>
+				<div class="mg-bottom">
+					<table>
+						<caption>Таблица владения навыками</caption>
+						<thead>
+						<tr>
+							<th colspan="2">Навыки</th>
+							<th>Junior</th>
+							<th>Middle</th>
+						</tr>
+						</thead>
 
-					<tbody>
-					<!-- HTML -->
-					<tr>
-						<th rowspan="6">HTML</th>
-						<td>Верстка основных элементов</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-					</tr>
-					<tr>
-						<td>Соблюдение семантики</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-					</tr>
-					<tr>
-						<td>Доступность сайта</td>
-						<td class="center">Базовые знания</td>
-						<td class="center">Продвинутые знания</td>
-					</tr>
-					<tr>
-						<td>Шаблонизаторы (Pug, Twig)</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled />
-								<span></span>
-							</label>
-						</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-					</tr>
-					<tr>
-						<td>Микроразметка</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled />
-								<span></span>
-							</label>
-						</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-					</tr>
-					<tr>
-						<td>Вёрстка под React (JSX, и CSS-in-JS)</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-					</tr>
+						<tbody>
+						<!-- HTML -->
+						<tr>
+							<th rowspan="6">HTML</th>
+							<td>Верстка основных элементов</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+						</tr>
+						<tr>
+							<td>Соблюдение семантики</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+						</tr>
+						<tr>
+							<td>Доступность сайта</td>
+							<td class="center">Базовые знания</td>
+							<td class="center">Продвинутые знания</td>
+						</tr>
+						<tr>
+							<td>Шаблонизаторы (Pug, Twig)</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled />
+									<span></span>
+								</label>
+							</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+						</tr>
+						<tr>
+							<td>Микроразметка</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled />
+									<span></span>
+								</label>
+							</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+						</tr>
+						<tr>
+							<td>Вёрстка под React (JSX, и CSS-in-JS)</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+						</tr>
 
-					<!-- CSS -->
-					<tr>
-						<th rowspan="6">CSS</th>
-						<td>Сетки (Flex, Grid)</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-					</tr>
-					<tr>
-						<td>Работа со шрифтами</td>
-						<td class="center">Вариативные шрифты</td>
-						<td class="center">Оптимизация шрифтов</td>
-					</tr>
-					<tr>
-						<td>Препроцессоры SASS, Less, PostCSS</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled />
-								<span></span>
-							</label>
-						</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-					</tr>
-					<tr>
-						<td>Методологии БЭМ</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-					</tr>
-					<tr>
-						<td>Фреймворк Bootstrap</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-					</tr>
-					<tr>
-						<td>Фреймворк Tailwind CSS</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled />
-								<span></span>
-							</label>
-						</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-					</tr>
+						<!-- CSS -->
+						<tr>
+							<th rowspan="6">CSS</th>
+							<td>Сетки (Flex, Grid)</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+						</tr>
+						<tr>
+							<td>Работа со шрифтами</td>
+							<td class="center">Вариативные шрифты</td>
+							<td class="center">Оптимизация шрифтов</td>
+						</tr>
+						<tr>
+							<td>Препроцессоры SASS, Less, PostCSS</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled />
+									<span></span>
+								</label>
+							</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+						</tr>
+						<tr>
+							<td>Методологии БЭМ</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+						</tr>
+						<tr>
+							<td>Фреймворк Bootstrap</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+						</tr>
+						<tr>
+							<td>Фреймворк Tailwind CSS</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled />
+									<span></span>
+								</label>
+							</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+						</tr>
 
-					<!-- JavaScript -->
-					<tr>
-						<th rowspan="6">JavaScript</th>
-						<td>Базовый синтаксис и конструкции</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-					</tr>
-					<tr>
-						<td>React</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-					</tr>
-					<tr>
-						<td>TypeScript</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-					</tr>
-					<tr>
-						<td>State Management (Redux, Mobx)</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled />
-								<span></span>
-							</label>
-						</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-					</tr>
-					<tr>
-						<td>SSR (Next.js)</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled />
-								<span></span>
-							</label>
-						</td>
-						<td class="center">
-							<label class="custom-checkbox">
-								<input type="checkbox" title="Отметка владения навыком" disabled checked />
-								<span></span>
-							</label>
-						</td>
-					</tr>
-					</tbody>
+						<!-- JavaScript -->
+						<tr>
+							<th rowspan="6">JavaScript</th>
+							<td>Базовый синтаксис и конструкции</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+						</tr>
+						<tr>
+							<td>React</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+						</tr>
+						<tr>
+							<td>TypeScript</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+						</tr>
+						<tr>
+							<td>State Management (Redux, Mobx)</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled />
+									<span></span>
+								</label>
+							</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+						</tr>
+						<tr>
+							<td>SSR (Next.js)</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled />
+									<span></span>
+								</label>
+							</td>
+							<td class="center">
+								<label class="custom-checkbox">
+									<input type="checkbox" title="Отметка владения навыком" disabled checked />
+									<span></span>
+								</label>
+							</td>
+						</tr>
+						</tbody>
 
-					<tfoot>
-					<tr>
-						<th colspan="2">Итого:</th>
-						<td class="center">Опыт < 1 года</td>
-						<td class="center">Опыт 1-3 года</td>
-					</tr>
-					</tfoot>
-				</table>
+						<tfoot>
+						<tr>
+							<th colspan="2">Итого:</th>
+							<td class="center">Опыт < 1 года</td>
+							<td class="center">Опыт 1-3 года</td>
+						</tr>
+						</tfoot>
+					</table>
+				</div>
 			</section>
 
 			<section id="articles" class="information block-margin">
