--- a/html/comments.html
+++ b/html/comments.html
@@ -86,7 +86,7 @@
 
 				<div id="comments_list" class="comments">
 					<article class="information-in block-margin">
-						<div class="user-info"><b>Maksim</b> <small>(address@mail.com)</small></div>
+						<div class="user-info"><b>Maksim</b> <small>(<a href="mailto:address@mail.com">address@mail.com</a>)</small></div>
 						<p class="comment">
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto at dolores doloribus dolorum ea error eum excepturi itaque magnam nemo neque nesciunt nihil odio praesentium repellendus sed sequi, ullam voluptate!
 						</p>
@@ -96,7 +96,7 @@
 					</article>
 
 					<article class="information-in block-margin">
-						<div class="user-info"><b>Максим</b> <small>(address@mail.ru)</small></div>
+						<div class="user-info"><b>Максим</b> <small>(<a href="mailto:address@mail.ru">address@mail.ru</a>)</small></div>
 						<p class="comment">
 							Не следует забывать, что дальнейшее развитие различных форм деятельности в значительной степени обуславливает создание позиций, занимаемых участниками в отношении поставленных задач. Равным образом постоянный количественный рост и сфера нашей активности влечет за собой процесс внедрения и модернизации форм развития.
 						</p>
