--- a/html/homeworks.html
+++ b/html/homeworks.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="../styles/normalize.css">
 	<link rel="stylesheet" href="../styles/style.css?1">
 	<link rel="stylesheet" href="../styles/adaptation.css">
 	<title>Список моих домашних заданий</title>
