--- a/html/homeworks/homework3.html
+++ b/html/homeworks/homework3.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="../styles/normalize.css">
-	<link rel="stylesheet" href="../styles/style.css?1">
-	<link rel="stylesheet" href="../styles/adaptation.css">
-	<title>Список моих домашних заданий</title>
+	<link rel="stylesheet" href="../../styles/normalize.css">
+	<link rel="stylesheet" href="../../styles/style.css?1">
+	<link rel="stylesheet" href="../../styles/adaptation.css">
+	<title>Модуль 3. Базовый CSS</title>
 </head>
 <body>
 	<div class="main-content">
@@ -16,41 +16,14 @@
 				<ul>
 					<li><a href="/urban-html/">Главная</a></li>
 					<li><a href="/urban-html/html/comments.html">Комментарии</a></li>
-					<li><a href="#">Мои дз</a></li>
+					<li><a href="/urban-html/html/homeworks.html">Мои дз</a></li>
 				</ul>
 			</nav>
 		</header>
 
 		<main class="content">
-			<section class="block-margin">
-				<h1>Полный список моих домашних заданий</h1>
-
-				<div class="information">
-					<section class="links-list">
-						<h2>Модуль 1</h2>
-						<ol>
-							<li><a href="../index.html">Страница «Обо мне»</a></li>
-							<li><a href="./homeworks/homework1.html">Кратко об HTML, CSS и JS</a></li>
-						</ol>
-					</section>
-
-					<section class="links-list">
-						<h2>Модуль 2</h2>
-						<ol>
-							<li><a href="./homeworks/homework2.html">Кратко о Frontend (введение)</a></li>
-							<li><a href="./homeworks/homework2_1.html">История профессии фронтенд-разработчика</a></li>
-							<li><a href="./comments.html">Форма для добавления комментария</a></li>
-						</ol>
-					</section>
-
-					<section class="links-list">
-						<h2>Модуль 3</h2>
-						<ol>
-							<li><a href="./homeworks/homework3.html">Базовый CSS</a></li>
-						</ol>
-					</section>
-				</div>
-			</section>
+			<h1>Зачетная работа по модулю №3</h1>
+			<iframe class="content__frame" src="./homework3_0.html"></iframe>
 		</main>
 	</div>
 
