--- a/html/homeworks/homework3.html
+++ b/html/homeworks/homework3.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="../../styles/normalize.css">
-	<link rel="stylesheet" href="../../styles/style.css?1">
-	<link rel="stylesheet" href="../../styles/adaptation.css">
+	<link rel="stylesheet" href="../../styles/style.css?3">
+	<link rel="stylesheet" href="../../styles/adaptation.css?3">
 	<title>Модуль 3. Базовый CSS</title>
 </head>
 <body>
