--- a/html/comments.html
+++ b/html/comments.html
@@ -34,7 +34,7 @@
 							<legend>Оставьте свой комментарий</legend>
 							<div class="input">
 								<label>
-									<b><sup>*</sup> Имя:</b>
+									<b><sup class="strict">*</sup> Имя:</b>
 									<input name="user_name" placeholder="Введите имя" required/>
 								</label>
 							</div>
@@ -48,7 +48,7 @@
 
 							<div class="input">
 								<label>
-									<b><sup>*</sup> E-mail:</b>
+									<b><sup class="strict">*</sup> E-mail:</b>
 									<input name="user_email" type="email"  placeholder="Введите e-mail адрес" required/>
 								</label>
 							</div>
@@ -69,7 +69,7 @@
 
 							<div class="input">
 								<label>
-									<b><sup>*</sup> Ваш комментарий:</b>
+									<b><sup class="strict">*</sup> Ваш комментарий:</b>
 									<textarea name="user_comment" placeholder="Напишите комментарий" required></textarea>
 								</label>
 							</div>
