--- a/html/homeworks.html
+++ b/html/homeworks.html
@@ -49,6 +49,13 @@
 							<li><a href="./homeworks/homework3.html">Базовый CSS</a></li>
 						</ol>
 					</section>
+
+					<section class="links-list">
+						<h2>Модуль 4</h2>
+						<ol>
+							<li><a href="./homeworks/homework4.html">JS.База</a></li>
+						</ol>
+					</section>
 				</div>
 			</section>
 		</main>
