--- a/html/homeworks/homework4.html
+++ b/html/homeworks/homework4.html
@@ -5,9 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="../../styles/normalize.css">
-	<link rel="stylesheet" href="../../styles/style.css?1">
-	<link rel="stylesheet" href="../../styles/adaptation.css">
-	<script async type="module" src="../../scripts/script.js"></script>
+	<link rel="stylesheet" href="../../styles/style.css?4">
+	<link rel="stylesheet" href="../../styles/adaptation.css?4">
+	<script async type="module" src="../../scripts/script.js?4"></script>
 	<title>Модуль 4. JS.База</title>
 </head>
 <body>
