--- a/html/homeworks/homework4.html
+++ b/html/homeworks/homework4.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="../../styles/normalize.css">
 	<link rel="stylesheet" href="../../styles/style.css?4">
 	<link rel="stylesheet" href="../../styles/adaptation.css?4">
-	<script async type="module" src="../../scripts/script.js?4"></script>
+	<script async type="module" src="../../scripts/modules/homeworks/homework4.js?1"></script>
 	<title>Модуль 4. JS.База</title>
 </head>
 <body>
