homework-5 (style-fix)

--- a/html/homeworks/homework5.html
+++ b/html/homeworks/homework5.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="../../styles/normalize.css">
-	<link rel="stylesheet" href="../../styles/style.css?1">
-	<link rel="stylesheet" href="../../styles/adaptation.css">
+	<link rel="stylesheet" href="../../styles/style.css?5">
+	<link rel="stylesheet" href="../../styles/adaptation.css?5">
 	<script async type="module" src="../../scripts/modules/homeworks/homework5.js?1"></script>
 	<title>Модуль 5. JS.База+</title>
 </head>
