--- a/html/homeworks/homework5.html
+++ b/html/homeworks/homework5.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="../../styles/style.css?5">
 	<link rel="stylesheet" href="../../styles/adaptation.css?5">
 	<script async type="module" src="../../scripts/modules/homeworks/homework5.js?1"></script>
-	<title>Модуль 5. JS.База+</title>
+	<title>Модуль 5. Простой список задач</title>
 </head>
 <body>
 	<div class="main-content">
