--- a/html/homeworks.html
+++ b/html/homeworks.html
@@ -64,6 +64,15 @@
 							<li><a href="./homeworks/homework5_1.html">Сохранение имени пользователя</a></li>
 						</ol>
 					</section>
+
+					<section class="links-list">
+						<h2>Модуль 7</h2>
+						<ol>
+							<li>
+								<a href="/Urban.Design.Tea/" target="_blank">Верстка сайта по макету</a>
+							</li>
+						</ol>
+					</section>
 				</div>
 			</section>
 		</main>
