--- a/html/homeworks.html
+++ b/html/homeworks.html
@@ -69,7 +69,8 @@
 						<h2>Модуль 7</h2>
 						<ol>
 							<li>
-								<a href="/Urban.Design.Tea/" target="_blank">Верстка сайта по макету</a>
+								<a href="/Urban.Design.Tea/" target="_blank">Верстка страницы по макету</a>
+								<a href="https://www.figma.com/design/sVG1u7IqUQAgPbPXNXpEhi/tea" target="_blank">Ссылка на макет</a>
 							</li>
 						</ol>
 					</section>
